added feature and deal

--- a/index.html
+++ b/index.html
@@ -1,22 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600;700&family=Open+Sans&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Flower Shop</title>
 </head>
+
 <body>
-    <header>
-
+    <!--Header section-->
+    <header class="header">
+        <nav class="banner">
+            <h1 class="banner-title">
+                Let's make
+                <br>
+                beautiful flowers a
+                <br>
+                part of your life.
+            </h1>
+            <p class="banner-description">
+                It is a long established fact that a reader will be distracted by the readable
+                <br>
+                content of a page when looking at its layout. The point of using Lorem Ipsum is
+                <br>
+                that it has a more-or-less normal distribution of letters.
+            </p>
+            <div class="btn-contact">
+                <button class="btn-primary">Shop Now</button>
+            </div>
+        </nav>
+        <nav class="banner-img">
+            <p>
+                <img class="banner-flower" src="images/pngwing 10.png">
+            </p>
+            
+        </nav>
     </header>
-
+    <!-- main section -->
     <main>
-
+        <!-- feature section -->
+        <section>
+            <div >
+                <div class="feature">
+                    <h1 class="feature-title">Our Featured Flowers</h1>
+                    <p class="feature-des">It is a long established fact that a reader will be distracted by the readable <br>
+                        content of a page when looking at its layout.</p>
+                </div>
+                <div class="feature-item">
+                    <div >
+                        <img class="feature-img-1" src="images/pngwing 6.png" alt="">
+                        <h6 class="feature-text" >Pink Flower Tree</h6>
+                    </div>
+                    <div >
+                        <img class="feature-img-2" src="images/pngwing 5.png" alt="">
+                        <h6 class="feature-text" >Pink Flower Tree</h6>
+                    </div>
+                    <div >
+                        <img  class="feature-img-3" src="images/pngwing 7.png" alt="">
+                        <h6 class="feature-text" >Pink Flower Tree</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- hot deal section -->
+        <section>
+            <div class="hot-deal">
+                <div class="deal-text">
+                    <h1 class="deal-title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h1>
+                    <p class="deal-des">It is a long established fact that a reader will be distracted by the readable <br>
+                        content of a page when looking at its layout.</p>
+                </div>
+                <div class="deal-img">
+                    <img src="images/pngwing 8.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
