--- a/index.html
+++ b/index.html
@@ -39,31 +39,32 @@
             <p>
                 <img class="banner-flower" src="images/pngwing 10.png">
             </p>
-            
+
         </nav>
     </header>
     <!-- main section -->
     <main>
         <!-- feature section -->
         <section>
-            <div >
+            <div>
                 <div class="feature">
                     <h1 class="feature-title">Our Featured Flowers</h1>
-                    <p class="feature-des">It is a long established fact that a reader will be distracted by the readable <br>
+                    <p class="feature-des">It is a long established fact that a reader will be distracted by the
+                        readable <br>
                         content of a page when looking at its layout.</p>
                 </div>
                 <div class="feature-item">
-                    <div >
+                    <div>
                         <img class="feature-img-1" src="images/pngwing 6.png" alt="">
-                        <h6 class="feature-text" >Pink Flower Tree</h6>
+                        <h6 class="feature-text">Pink Flower Tree</h6>
                     </div>
-                    <div >
+                    <div>
                         <img class="feature-img-2" src="images/pngwing 5.png" alt="">
-                        <h6 class="feature-text" >Pink Flower Tree</h6>
+                        <h6 class="feature-text">Pink Flower Tree</h6>
                     </div>
-                    <div >
-                        <img  class="feature-img-3" src="images/pngwing 7.png" alt="">
-                        <h6 class="feature-text" >Pink Flower Tree</h6>
+                    <div>
+                        <img class="feature-img-3" src="images/pngwing 7.png" alt="">
+                        <h6 class="feature-text">Pink Flower Tree</h6>
                     </div>
                 </div>
             </div>
@@ -73,18 +74,58 @@
             <div class="hot-deal">
                 <div class="deal-text">
                     <h1 class="deal-title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h1>
-                    <p class="deal-des">It is a long established fact that a reader will be distracted by the readable <br>
+                    <p class="deal-des">It is a long established fact that a reader will be distracted by the readable
+                        <br>
                         content of a page when looking at its layout.</p>
+                    <div class="btn-contact">
+                        <button class="btn-primary">Sign UP</button>
+                    </div>
                 </div>
                 <div class="deal-img">
                     <img src="images/pngwing 8.png" alt="">
                 </div>
             </div>
         </section>
+        <!-- instagram section -->
+        <section class="insta-sec">
+            <div class="insta">
+                <h1 class="insta-title">Instagram</h1>
+                <p class="insta-des">It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="insta-container">
+                <div class="insta-img"><img src="images/Flower 01.png" alt=""></div>
+                <div class="insta-img"><img src="images/Rectangle 4.png" alt=""></div>
+                <div class="insta-img"><img src="images/Rectangle 5.png" alt=""></div>
+                <div class="insta-img"><img src="images/Rectangle 6.png" alt=""></div>
+            </div>
+        </section>
+        <!-- subscribe section -->
+        <section>
+            <div class="sub-sec">
+                <div class="subs-text">
+                    <h2 class="subs-title">Get The Latest Deals</h2>
+                    <p class="subs-des">$30 coupon for first shopping</p>
+                </div>
+                <div class="subscribe-container">
+                    <div>
+                        <input type="email" name="" id="input" placeholder="Enter your Email here.......">
+                    </div>
+                    <div class="btn-contact">
+                        <button class="btn-primary">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-
+      <div class="footer">
+<h1 class="f-title"><span style="color: #E55473;">Flower</span>Shop</h1>
+<p class="f-text">It is a long established fact that a reader will be distracted by the readable <br>
+    content of a page when looking at its layout.</p>
+<p class="f">@2020-2023, FlowerShop.com. All rights reserved. </p>
+      </div>
     </footer>
 </body>
 
