--- a/index.html
+++ b/index.html
@@ -69,6 +69,26 @@
                 </div>
             </div>
         </section>
+        <!-- my created section -->
+        <section class="service-bac">
+            <div>
+                <h1 class="service-title">Our Services</h1>
+            </div>
+            <div class="service-container">
+                <div class="service">
+                    <img class="img-1" src="images/Group 57.png" alt="">
+                    <p class="ser-text">Home Delivery</p>
+                </div>
+                <div class="service">
+                    <img class="img-1" src="images/Group 58.png" alt="">
+                    <p class="ser-text">Customized Bouque</p>
+                </div>
+                <div class="service">
+                    <img class="img-1" src="images/Group 59.png" alt="">
+                    <p class="ser-text">24/7 customer Service</p>
+                </div>
+            </div>
+        </section>
         <!-- hot deal section -->
         <section>
             <div class="hot-deal">
@@ -76,7 +96,8 @@
                     <h1 class="deal-title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h1>
                     <p class="deal-des">It is a long established fact that a reader will be distracted by the readable
                         <br>
-                        content of a page when looking at its layout.</p>
+                        content of a page when looking at its layout.
+                    </p>
                     <div class="btn-contact">
                         <button class="btn-primary">Sign UP</button>
                     </div>
@@ -94,8 +115,12 @@
                     content of a page when looking at its layout.</p>
             </div>
             <div class="insta-container">
-                <div class="insta-img"><img src="images/Flower 01.png" alt=""></div>
-                <div class="insta-img"><img src="images/Rectangle 4.png" alt=""></div>
+                <div class="insta-img">
+                    <img src="images/Flower 01.png" alt="">
+
+                </div>
+                <div class="insta-img"><img src="images/Rectangle 4.png" alt="">
+                </div>
                 <div class="insta-img"><img src="images/Rectangle 5.png" alt=""></div>
                 <div class="insta-img"><img src="images/Rectangle 6.png" alt=""></div>
             </div>
@@ -120,12 +145,12 @@
     </main>
 
     <footer>
-      <div class="footer">
-<h1 class="f-title"><span style="color: #E55473;">Flower</span>Shop</h1>
-<p class="f-text">It is a long established fact that a reader will be distracted by the readable <br>
-    content of a page when looking at its layout.</p>
-<p class="f">@2020-2023, FlowerShop.com. All rights reserved. </p>
-      </div>
+        <div class="footer">
+            <h1 class="f-title"><span style="color: #E55473;">Flower</span>Shop</h1>
+            <p class="f-text">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <p class="f">@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
     </footer>
 </body>
 
